Fix Ads activity issue

--- a/plugin.xml
+++ b/plugin.xml
@@ -2,13 +2,13 @@
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     id="cordova-plugin-startapp-ads"
-    version="1.1.6">
+    version="1.1.7">
     <name>StartApp Ads</name>
     <description></description>
     <license>MIT</license>
     <keywords>startapp, ads, android, ios, plugin</keywords>
-    <repo>https://github.com/lreiner/cordova-plugin-startapp-ads.git</repo>
-    <issue>https://github.com/lreiner/cordova-plugin-startapp-ads/issues</issue>
+    <repo>https://github.com/itsSoufianeDev/startapp-ionic-cordova-plugin.git</repo>
+    <issue>https://github.com/itsSoufianeDev/startapp-ionic-cordova-plugin/issues</issue>
 
     <js-module src="www/startappads.js" name="StartAppAds">
       <runs/>
@@ -21,34 +21,43 @@
     </engines>
 
     <platform name="android">
-      <preference name="APP_ID_ANDROID" default="test" />
       <config-file target="AndroidManifest.xml" mode="merge" parent="/manifest/application">
-        <activity android:name="com.startapp.android.publish.ads.list3d.List3DActivity"
-                  android:theme="@android:style/Theme" />
-        <activity android:name="com.startapp.android.publish.adsCommon.activities.OverlayActivity"
-                  android:theme="@android:style/Theme.Translucent"
-                  android:configChanges="orientation|keyboardHidden|screenSize" />
-        <activity android:name="com.startapp.android.publish.adsCommon.activities.FullScreenActivity"
-                  android:theme="@android:style/Theme"
-                  android:configChanges="orientation|keyboardHidden|screenSize" />
-        <service android:name="com.startapp.android.publish.common.metaData.PeriodicMetaDataService" />
-        <service android:name="com.startapp.android.publish.common.metaData.InfoEventService" />
-        <service android:name="com.startapp.android.publish.common.metaData.PeriodicJobService"
-                 android:permission="android.permission.BIND_JOB_SERVICE" />
-        <receiver android:name="com.startapp.android.publish.common.metaData.BootCompleteListener" >
-        	<intent-filter>
-        		<action android:name="android.intent.action.BOOT_COMPLETED" />
-        	</intent-filter>
+        <activity
+         android:name="com.startapp.android.publish.adsCommon.consent.ConsentActivity"
+         android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
+         android:theme="@android:style/Theme.Translucent"/>
+
+        <activity
+         android:name="com.startapp.android.publish.ads.list3d.List3DActivity"
+         android:theme="@android:style/Theme"/>
+
+        <activity
+         android:name="com.startapp.android.publish.adsCommon.activities.OverlayActivity"
+         android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
+         android:theme="@android:style/Theme.Translucent"/>
+
+        <activity
+         android:name="com.startapp.android.publish.adsCommon.activities.FullScreenActivity"
+         android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
+         android:theme="@android:style/Theme"/>
+
+        <service android:name="com.startapp.android.publish.common.metaData.PeriodicMetaDataService"/>
+        <service android:name="com.startapp.android.publish.common.metaData.InfoEventService"/>
+
+        <service
+         android:name="com.startapp.android.publish.common.metaData.PeriodicJobService"
+         android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <receiver android:name="com.startapp.android.publish.common.metaData.BootCompleteListener">
+          <intent-filter>
+            <action android:name="android.intent.action.BOOT_COMPLETED"/>
+          </intent-filter>
         </receiver>
       </config-file>
       <config-file target="AndroidManifest.xml" mode="merge" parent="/*">
         <uses-permission android:name="android.permission.INTERNET" />
       	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
       	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-      	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-      	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-      	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-      	<uses-permission android:name="android.permission.BLUETOOTH" />
       </config-file>
       <config-file target="res/xml/config.xml" parent="/*">
           <feature name="StartAppAdsPlugin">
