--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-startapp-ads" version="1.3.0"
+<plugin id="cordova-plugin-startapp-ads" version="1.3.1"
     xmlns="http://apache.org/cordova/ns/plugins/1.0">
     <name>StartApp Ads</name>
     <description />
@@ -18,7 +18,8 @@
     <platform name="android">
         <config-file mode="merge" parent="/manifest/application" target="AndroidManifest.xml">
 
-            <meta-data android:name="com.startapp.sdk.APPLICATION_ID" android:value="209797308" />
+            <meta-data android:name="com.startapp.sdk.RETURN_ADS_ENABLED" android:value="false" />
+            <meta-data android:name="com.startapp.sdk.SPLASH_ENABLED" android:value="false" />
         
             <provider
              android:name="com.startapp.sdk.adsbase.StartAppInitProvider"
@@ -71,6 +72,7 @@
         <source-file src="src/android/StartAppInApp-4.10.2.jar" target-dir="libs" />
     </platform>
 
+    <!--
     <platform name="ios">
         <config-file parent="/*" target="config.xml">
             <feature name="StartAppAds">
@@ -82,10 +84,11 @@
         <source-file src="src/ios/StartAppAds.m" />
 
         <framework src="src/ios/StartApp.framework" custom="true" />
-        <!--<framework src="StoreKit.framework" weak="true" />
+        <framework src="StoreKit.framework" weak="true" />
         <framework src="Foundation.framework" />
         <framework src="CoreGraphics.framework" />
-        <framework src="UIKit.framework" />-->
+        <framework src="UIKit.framework" />
 
     </platform>
+    -->
 </plugin>
